Bug 467398 - 5e702ee5d70b9f54fbe02ffe43c5d8409424c6fc regresses rectangular region positioning in viewer window
Summary: 5e702ee5d70b9f54fbe02ffe43c5d8409424c6fc regresses rectangular region positio...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-03-15 14:02 UTC by Nate Graham
Modified: 2023-03-15 15:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Quarter-size screenshot (180.93 KB, image/jpeg)
2023-03-15 14:02 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-03-15 14:02:09 UTC
Created attachment 157306 [details]
Quarter-size screenshot

I'm using Wayland with 200% scale. With that commit, rectangular region screenshots are mis-positioned in the viewer window; instead of being either maximized in the window (if they would need to be scaled down) or centered in it (if they fully fit), they are now always displayed at 50% size in the top-left corner. See attached screenshot.

To reproduce the issue:
1. Use Wayland
2. Use 200% scale
3. Launch Spectacle and take a Rectangular region screenshot

This worked as expected in 7378735a6cbd4c3d02f23f02e88b9452ee0e54ab.
Comment 1 Noah Davis 2023-03-15 14:08:37 UTC
Can confirm this happens at 200% scale, not just on wayland either
Comment 2 Bug Janitor Service 2023-03-15 14:56:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/212
Comment 3 Noah Davis 2023-03-15 15:03:38 UTC
Git commit 659ca669db4711d553ddee0c9c4d78bafc3496ad by Noah Davis.
Committed on 15/03/2023 at 15:02.
Pushed by ndavis into branch 'master'.

AnnotationDocument: Divide image size by devicePixelRatio in addImage()

M  +1    -1    src/Gui/Annotations/AnnotationDocument.cpp

https://invent.kde.org/graphics/spectacle/commit/659ca669db4711d553ddee0c9c4d78bafc3496ad
Comment 4 Noah Davis 2023-03-15 15:04:18 UTC
Git commit cd9db55c57c4dea398dce2341d78ab2197a140fc by Noah Davis.
Committed on 15/03/2023 at 15:04.
Pushed by ndavis into branch 'release/23.04'.

AnnotationDocument: Divide image size by devicePixelRatio in addImage()


(cherry picked from commit 659ca669db4711d553ddee0c9c4d78bafc3496ad)

M  +1    -1    src/Gui/Annotations/AnnotationDocument.cpp

https://invent.kde.org/graphics/spectacle/commit/cd9db55c57c4dea398dce2341d78ab2197a140fc