AnnotationDocument: Divide image size by devicePixelRatio in addImage()

BUG: 467398


(cherry picked from commit 659ca669db4711d553ddee0c9c4d78bafc3496ad)